ajout de responsive

--- a/setting.html
+++ b/setting.html
@@ -29,7 +29,7 @@
             </li>
             <li class="liste" >
                 <img class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(8).png" alt="">
-                <img class="images_blanc" src="images/icon_blanc/icons-blanc-2).png" alt="">
+                <img class="images_blanc" src="images/icon_blanc/icons-blanc-2.png" alt="">
                 <a href="#" class="w3-bar-item ">Project</a>
             </li>
             <li class="liste">
