changement de nom de fichier

--- a/calendar.html
+++ b/calendar.html
@@ -10,11 +10,11 @@
 <body>
 <div class="w3-sidebar w3-bar-block w3-sidebar " style="width:18%;height: 100%">
     <div class="sidebar-head">
-        <a href="registration.html">
+        <a href="index.html">
             <img src="images/picture/prim-logo.png" alt="">
         </a>
         <div class="text">
-            <a href="registration.html">Project Name </a>
+            <a href="index.html">Project Name </a>
             <p>Category</p>
         </div>
     </div>
