Ajout de responsive de setting.html

--- a/setting.html
+++ b/setting.html
@@ -77,9 +77,12 @@
         <div class="text-images">
             <div class="images-button">
                 <div class="text-picture">
-                    <div class="titre">Connected apps</div>
-                    <p>Dolor sunt non qui adipisicing mollit ad</p>
-                    <img src="images/Bilder/image-1.png" alt="">
+                    <button class="img"><img src="images/image_responsive/Button%203007.png" alt=""></button>
+                    <div>
+                        <div class="titre">Connected apps</div>
+                        <p>Dolor sunt non qui adipisicing mollit ad</p>
+                    </div>
+                    <img class="none" src="images/Bilder/image-1.png" alt="">
                 </div>
                 <div class="text-button">
                     <div class="text">
@@ -277,7 +280,18 @@
                 </div>
             </div>
         </div>
-
+    </div>
+<!--********container-images-text-button_foot********-->
+    <div class="container-images-text-button_footer">
+        <h2>72</h2>
+        <div class="foot">
+            <div class="big_title">Used credits this month</div>
+            <div class="paragraph">Your teams has used 72% of your available credits. Need more?</div>
+            <div class="button1-2">
+                <button class="btn1">Dismiss</button>
+                <button class="btn2">Upgrade</button>
+            </div>
+        </div>
     </div>
 </section>
 
