--- a/setting.html
+++ b/setting.html
@@ -136,7 +136,7 @@
         <hr>
         <div class="logo">
             <div class="logo-text">
-                <a href="">
+                <a href="https://facebook.com">
                     <img src="images/Bilder/Button-facebook.png" alt="">
                 </a>
                 <div class="titre-para">
