modification dans le setting.html

--- a/setting.html
+++ b/setting.html
@@ -137,7 +137,7 @@
         <div class="logo">
             <div class="logo-text">
                 <a href="https://facebook.com">
-                    <img src="images/Bilder/Button-facebook.png" alt="">
+                    <img src="images/Bilder/Button-facebook.png" alt="logo facebook">
                 </a>
                 <div class="titre-para">
                     <h5>Facebook</h5>
