ajout de responsive de en version mobile

--- a/dashboard.html
+++ b/dashboard.html
@@ -73,7 +73,7 @@
 <section  class="corps" style="margin-left:18%">
     <div class="container">
         <h1>Dashboard</h1>
-        <div class="button" style="margin-right: 0px">
+        <div class="button" style="margin-right: 0">
             <button class="button-1"><img src="images/picture/plus-math-24.png" alt="">Create new project</button>
             <button class="button-2"><img style="width: 15px" src="images/picture/share-24.png" alt="">Share</button>
         </div>
