modification dans le style.css

--- a/setting.html
+++ b/setting.html
@@ -72,7 +72,7 @@
 </div>
 
 <!-- Page Content -->
-<section class="corps" style="margin-left:18%">
+<section class="corps setting" style="margin-left:18%">
     <div class="texto-img-button">
         <div class="text-images">
             <div class="images-button">
