modification de responsive de sidebar_menu

--- a/calendar.html
+++ b/calendar.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 <body>
-<div class="w3-sidebar w3-bar-block w3-sidebar " style="width:18%;height: 100%">
+<div class="w3-sidebar w3-bar-block w3-sidebar " style="width:18%;height: 100vh">
     <div class="sidebar-head">
         <a href="index.html">
             <img src="images/picture/prim-logo.png" alt="">
@@ -18,53 +18,55 @@
             <p>Category</p>
         </div>
     </div>
-    <div class="sidebar-menu">
-        <ul>
-            <li class="liste">
-                <img class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(1).png" alt="">
-                <img class="images_blanc" src="images/icon_blanc/icons8-blanc-1.png" alt="">
-                <a href="dashboard.html" class="w3-bar-item">Dashboard</a>
-            </li>
-            <li class="liste" >
-                <img class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(8).png" alt="">
-                <img class="images_blanc" src="images/icon_blanc/icons-blanc-2.png" alt="">
-                <a href="#" class="w3-bar-item ">Project</a>
-            </li>
-            <li class="liste calendar_active">
-                <img class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(7).png" alt="">
-                <img  src="images/icon_blanc/icons8-blanc-3.png" alt="">
-                <a href="calendar.html" class="w3-bar-item ">Calendar</a>
-            </li>
-            <li class="liste">
-                <img class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(6).png" alt="">
-                <img class="images_blanc" src="images/icon_blanc/imgpsh_fullsize_anim%20(2).png" alt="">
-                <a href="#" class="w3-bar-item ">Teams</a>
-            </li>
-            <li class="liste">
-                <img class="images_noire" src="images/picture/imgpsh_fullsize_anim.png" alt="">
-                <img class="images_blanc" src="images/icon_blanc/icons8-blanc-5.png" alt="">
-                <a href="#" class="w3-bar-item ">Analytics</a>
-            </li>
-            <li class="liste">
-                <img class="images_noire" src="images/picture/source-code--v4.png" alt="">
-                <img class="images_blanc" src="images/icon_blanc/icons8-blanc-6.png" alt="">
-                <a href="setting.html" class="w3-bar-item ">Integrations</a>
-            </li>
-            <li class="liste">
-                <img class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(5).png" alt="">
-                <img class="images_blanc" src="images/icon_blanc/icons8-blanc-7.png" alt="">
-                <a href="#" class="w3-bar-item ">Messages</a>
-            </li>
-        </ul>
+    <div class="side_menu">
+        <div class="sidebar-menu">
+            <ul>
+                <li class="liste">
+                    <img class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(1).png" alt="">
+                    <img class="images_blanc" src="images/icon_blanc/icons8-blanc-1.png" alt="">
+                    <a href="dashboard.html" class="w3-bar-item">Dashboard</a>
+                </li>
+                <li class="liste" >
+                    <img class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(8).png" alt="">
+                    <img class="images_blanc" src="images/icon_blanc/icons-blanc-2.png" alt="">
+                    <a href="#" class="w3-bar-item ">Project</a>
+                </li>
+                <li class="liste calendar_active">
+                    <img class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(7).png" alt="">
+                    <img  src="images/icon_blanc/icons8-blanc-3.png" alt="">
+                    <a href="calendar.html" class="w3-bar-item ">Calendar</a>
+                </li>
+                <li class="liste">
+                    <img class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(6).png" alt="">
+                    <img class="images_blanc" src="images/icon_blanc/imgpsh_fullsize_anim%20(2).png" alt="">
+                    <a href="#" class="w3-bar-item ">Teams</a>
+                </li>
+                <li class="liste">
+                    <img class="images_noire" src="images/picture/imgpsh_fullsize_anim.png" alt="">
+                    <img class="images_blanc" src="images/icon_blanc/icons8-blanc-5.png" alt="">
+                    <a href="#" class="w3-bar-item ">Analytics</a>
+                </li>
+                <li class="liste">
+                    <img class="images_noire" src="images/picture/source-code--v4.png" alt="">
+                    <img class="images_blanc" src="images/icon_blanc/icons8-blanc-6.png" alt="">
+                    <a href="setting.html" class="w3-bar-item ">Integrations</a>
+                </li>
+                <li class="liste">
+                    <img class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(5).png" alt="">
+                    <img class="images_blanc" src="images/icon_blanc/icons8-blanc-7.png" alt="">
+                    <a href="#" class="w3-bar-item ">Messages</a>
+                </li>
+            </ul>
 
-    </div>
+        </div>
 
-    <!--    *******************-->
-    <div class="sidebar-images">
-        <img src="images/picture/Avatar%201674-button.png" alt="">
-        <div class="text">
-            <h4>Sergey Goldberg</h4>
-            <p>Company@exemple.com</p>
+        <!--    *******************-->
+        <div class="sidebar-images">
+            <img src="images/picture/Avatar%201674-button.png" alt="">
+            <div class="text">
+                <h4>Sergey Goldberg</h4>
+                <p>Company@exemple.com</p>
+            </div>
         </div>
     </div>
 </div>
@@ -94,7 +96,7 @@
                     </div>
                     <div class="avatar_2">
                         <div class="images_avatar">
-                            <img src="images/image_responsive/Avatar%200000%20(1).png" alt="">
+                            <img  src="images/image_responsive/Avatar%200000%20(1).png" alt="">
                             <img class="avatar" src="images/image_responsive/Avatar%20003.png" alt="">
                             <img class="avatar" src="images/image_responsive/Avatar%20004.png" alt="">
                             <img class="avatar" src="images/image_responsive/Avatar%20005.png" alt="">
@@ -303,7 +305,7 @@
                         </div>
                         <div class="d-flex-img-points">
                             <div class="images">
-                                <img src="images/calendar/Avatar%202526.png" alt="">
+                                <img class="avatar" src="images/calendar/Avatar%202526.png" alt="">
                                 <img class="avatar" src="images/calendar/Avatar%202.png" alt="">
                                 <img class="avatar" src="images/calendar/Avatar%201677-3.png" alt="">
                                 <img class="avatar" src="images/calendar/Avatar%204.png" alt="">
@@ -345,7 +347,7 @@
                         </div>
                         <div class="d-flex-img-points">
                             <div class="images">
-                                <img src="images/calendar/Avatar%202526.png" alt="">
+                                <img class="avatar" src="images/calendar/Avatar%202526.png" alt="">
                                 <img class="avatar" src="images/calendar/Avatar%202.png" alt="">
                                 <img class="avatar" src="images/calendar/Avatar%205.png" alt="">
                                 <img class="avatar" src="images/calendar/Avatar%206.png" alt="">
@@ -380,7 +382,7 @@
                         </div>
                         <div class="d-flex-img-points">
                             <div class="images">
-                                <img src="images/calendar/Avatar%202526.png" alt="">
+                                <img class="avatar" src="images/calendar/Avatar%202526.png" alt="">
                                 <img class="avatar" src="images/calendar/Avatar8.png" alt="">
                                 <img class="avatar" src="images/calendar/Avatar%2000001.png" alt="">
                                 <img class="avatar" src="images/calendar/Avatar%200002.png" alt="">
@@ -415,7 +417,7 @@
                         </div>
                         <div class="d-flex-img-points">
                             <div class="images">
-                                <img src="images/calendar/Avatar%202526.png" alt="">
+                                <img class="avatar" src="images/calendar/Avatar%202526.png" alt="">
                                 <img class="avatar" src="images/calendar/Avatar%202.png" alt="">
                                 <img class="avatar" src="images/calendar/Avatar%200003.png" alt="">
                                 <img class="avatar" src="images/calendar/Avatar%200006.png" alt="">
