--- a/dashboard.html
+++ b/dashboard.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 <body>
-<div class="w3-sidebar w3-bar-block w3-sidebar " style="width:18%;height: 100%;background-color: white">
+<div class="w3-sidebar w3-bar-block w3-sidebar " style="width:18%;height: 100vh;background-color: white">
     <div class="sidebar-head">
         <a href="index.html">
             <img src="images/picture/prim-logo.png" alt="">
@@ -18,53 +18,54 @@
             <p>Category</p>
         </div>
     </div>
-    <div class="sidebar-menu">
-        <ul>
-            <li class="liste dashboard_active" style="background-color: #00bdd6">
-                <img  class="images_noire"  src="images/picture/imgpsh_fullsize_anim%20(1).png" alt="">
-                <img src="images/picture/four-squares-50.png" alt="">
-                <a href="dashboard.html" class="w3-bar-item">Dashboard</a>
-            </li>
-            <li class="liste">
-                <img  class="images_noire"  src="images/picture/imgpsh_fullsize_anim%20(8).png" alt="">
-                <img class="images_blanc" src="images/icon_blanc/icons-blanc-2.png" alt="">
-                <a href="#" class="w3-bar-item ">Project</a>
-            </li>
-            <li class="liste">
-                <img  class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(7).png" alt="">
-                <img class="images_blanc" src="images/icon_blanc/icons8-blanc-3.png" alt="">
-                <a href="calendar.html" class="w3-bar-item ">Calendar</a>
-            </li>
-            <li class="liste">
-                <img class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(6).png" alt="">
-                <img class="images_blanc" src="images/icon_blanc/imgpsh_fullsize_anim%20(2).png" alt="">
-                <a href="#" class="w3-bar-item ">Teams</a>
-            </li>
-            <li class="liste">
-                <img class="images_noire" src="images/picture/imgpsh_fullsize_anim.png" alt="">
-                <img class="images_blanc" src="images/icon_blanc/icons8-blanc-5.png" alt="">
-                <a href="#" class="w3-bar-item ">Analytics</a>
-            </li>
-            <li class="liste">
-                <img class="images_noire" src="images/picture/source-code--v4.png" alt="">
-                <img class="images_blanc" src="images/icon_blanc/icons8-blanc-6.png" alt="">
-                <a href="setting.html" class="w3-bar-item ">Integrations</a>
-            </li>
-            <li class="liste">
-                <img class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(5).png" alt="">
-                <img class="images_blanc" src="images/icon_blanc/icons8-blanc-7.png" alt="">
-                <a href="#" class="w3-bar-item ">Messages</a>
-            </li>
-        </ul>
+    <div class="side_menu">
+        <div class="sidebar-menu">
+            <ul>
+                <li class="liste dashboard_active" style="background-color: #00bdd6">
+                    <img  class="images_noire"  src="images/picture/imgpsh_fullsize_anim%20(1).png" alt="">
+                    <img src="images/picture/four-squares-50.png" alt="">
+                    <a href="dashboard.html" class="w3-bar-item">Dashboard</a>
+                </li>
+                <li class="liste">
+                    <img  class="images_noire"  src="images/picture/imgpsh_fullsize_anim%20(8).png" alt="">
+                    <img class="images_blanc" src="images/icon_blanc/icons-blanc-2.png" alt="">
+                    <a href="#" class="w3-bar-item ">Project</a>
+                </li>
+                <li class="liste">
+                    <img  class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(7).png" alt="">
+                    <img class="images_blanc" src="images/icon_blanc/icons8-blanc-3.png" alt="">
+                    <a href="calendar.html" class="w3-bar-item ">Calendar</a>
+                </li>
+                <li class="liste">
+                    <img class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(6).png" alt="">
+                    <img class="images_blanc" src="images/icon_blanc/imgpsh_fullsize_anim%20(2).png" alt="">
+                    <a href="#" class="w3-bar-item ">Teams</a>
+                </li>
+                <li class="liste">
+                    <img class="images_noire" src="images/picture/imgpsh_fullsize_anim.png" alt="">
+                    <img class="images_blanc" src="images/icon_blanc/icons8-blanc-5.png" alt="">
+                    <a href="#" class="w3-bar-item ">Analytics</a>
+                </li>
+                <li class="liste">
+                    <img class="images_noire" src="images/picture/source-code--v4.png" alt="">
+                    <img class="images_blanc" src="images/icon_blanc/icons8-blanc-6.png" alt="">
+                    <a href="setting.html" class="w3-bar-item ">Integrations</a>
+                </li>
+                <li class="liste">
+                    <img class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(5).png" alt="">
+                    <img class="images_blanc" src="images/icon_blanc/icons8-blanc-7.png" alt="">
+                    <a href="#" class="w3-bar-item ">Messages</a>
+                </li>
+            </ul>
+        </div>
 
-    </div>
-
-    <!--    *******************-->
-    <div class="sidebar-images">
-        <img src="images/picture/Avatar%201674-button.png" alt="">
-        <div class="text">
-            <h4>Sergey Goldberg</h4>
-            <p>Company@exemple.com</p>
+        <!--    *******************-->
+        <div class="sidebar-images">
+            <img src="images/picture/Avatar%201674-button.png" alt="">
+            <div class="text">
+                <h4>Sergey Goldberg</h4>
+                <p>Company@exemple.com</p>
+            </div>
         </div>
     </div>
 </div>
