ajout de oval dans le fichier index.html

--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
 </head>
 <body class="body_registration">
 <section class="container_registration">
-    <div class="head">
+    <section class="oval">
+        <div class="them-content">
+            <div class="themeContainer">
+                <div class="theme" id="yellow"></div>
+            </div>
+        </div>
         <a href=""><img src="assets/images/resi/Image%202345%20(1).png" alt="logo de registration"></a>
-    </div>
+     </section>
+    
     <div class="picture">
         <div class="images"><img src="assets/images/resi/Group%20200%20(1).png" alt=""></div>
         <div class="container">
