--- a/index.html
+++ b/index.html
@@ -6,17 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/css/registration.css">
 </head>
-<body class="body_registration">
-<section class="container_registration">
-    <section class="oval">
-        <div class="them-content">
-            <div class="themeContainer">
-                <div class="theme" id="yellow"></div>
-            </div>
-        </div>
+<body>
+<section class="registration">
+    <div class="logo">
         <a href=""><img src="assets/images/resi/Image%202345%20(1).png" alt="logo de registration"></a>
-     </section>
-    <div class="picture">
+     </div>
+    <div class="registration-container">
         <div class="images"><img src="assets/images/resi/Group%20200%20(1).png" alt=""></div>
         <div class="container">
             <div class="content">
@@ -62,6 +57,11 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="ovals">
+        <div class="oval1"></div>
+        <div class="oval2"></div>
+        <div class="oval3"></div>
     </div>
 </section>
 <script src="assets/js/index.js"></script>
