arangement de fichier et de dossier

--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
         <a href=""><img src="assets/images/resi/Image%202345%20(1).png" alt="logo de registration"></a>
      </div>
     <div class="registration-container">
-        <div class="images"><img src="assets/images/resi/Group%20200%20(1).png" alt=""></div>
+        <div class="images"><img src="assets/images/resi/Group%20200%20(1).png" alt="image"></div>
         <div class="container">
             <div class="content">
                 <h1>Create an account</h1>
                 <p>Star your 30 day free trial</p>
                 <div class="button">
                     <div class="btn btn1">
-                        <a href="https://google.com"><img src="assets/images/icons/google-logo-rouge.png" alt=""></a>
+                        <a href="https://google.com"><img src="assets/images/icons/google-logo-rouge.png" alt="logo google"></a>
                     </div>
                     <div class="btn btn2">
-                        <a href="https://facebook.com"><img src="assets/images/icons/logo-facebook.png" alt=""></a>
+                        <a href="https://facebook.com"><img src="assets/images/icons/logo-facebook.png" alt="logo facebook"></a>
                     </div>
                     <div class="btn btn3">
-                        <a href="#"><img src="assets/images/icons/Apple-logo.png" alt=""></a>
+                        <a href="#"><img src="assets/images/icons/Apple-logo.png" alt="image"></a>
                     </div>
                 </div>
                 <div class="text-box">
@@ -44,7 +44,7 @@
                                 <div class="i_input">
                                     <input type="password" id="password" placeholder="Mot de passe" name="password">
                                 </div>
-                                <img src="assets/images/icons/eye-masquer.png" id="eye" onclick="changer()" alt="">
+                                <img src="assets/images/icons/eye-masquer.png" id="eye" onclick="changer()" alt="eye">
                             </div>
                         </div>
                     </form>
